[gd_scene load_steps=21 format=2]

[ext_resource path="res://Cenas/HUD/Imagens/progressbar_cor_sasuke_fundo.png" type="Texture" id=1]
[ext_resource path="res://Cenas/HUD/Imagens/rosto_naruto.png" type="Texture" id=2]
[ext_resource path="res://Cenas/HUD/Imagens/progressbar_cor_sasuke_chakra.png" type="Texture" id=3]
[ext_resource path="res://Cenas/HUD/Imagens/progressbar_cor_sasuke_furia.png" type="Texture" id=4]
[ext_resource path="res://Cenas/HUD/Imagens/progressbar_cor_naruto_furia.png" type="Texture" id=5]
[ext_resource path="res://Cenas/HUD/Imagens/progressbar_cor_naruto_chakra.png" type="Texture" id=6]
[ext_resource path="res://Cenas/HUD/Imagens/progressbar_cor_naruto_fundo.png" type="Texture" id=7]
[ext_resource path="res://Cenas/HUD/Imagens/progressbar_cor_vida.png" type="Texture" id=8]
[ext_resource path="res://Cenas/HUD/Imagens/rosto_sasuke.png" type="Texture" id=9]
[ext_resource path="res://Cenas/HUD/script_hud.gd" type="Script" id=10]
[ext_resource path="res://Cenas/Fonte/njnaruto.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Cenas/HUD/script_timer.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = 4
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = 4
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=3]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = 4
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=8]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = 4
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=9]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = 4
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Furia_completa:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anima:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "furia_completa_naruto"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Furia_completa:custom_fonts/font:outline_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.305882, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Furia_completa:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Anima:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.0014817 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.1, 0.1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "furia_completa_sasuke"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Furia_completa:custom_fonts/font:outline_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.305882, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Furia_completa:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Anima:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.0014817 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.1, 0.1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Furia_completa:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 10 )

[node name="Control" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Naruto" type="Label" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.96046e-07
margin_right = -397.0
margin_bottom = -223.0
rect_scale = Vector2( 1.44929, 1.44929 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Img_barra_naruto" type="Sprite" parent="Control/Naruto"]
position = Vector2( 44.5, 65 )
scale = Vector2( 0.0561644, 0.0653595 )
texture = ExtResource( 2 )

[node name="Barra_vida" type="TextureProgress" parent="Control/Naruto"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 18.0
margin_right = 12.0
margin_bottom = 18.0
value = 50.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 8 )
texture_progress_offset = Vector2( 60, 28 )
tint_progress = Color( 0.898039, 0, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Barra_furia" type="TextureProgress" parent="Control/Naruto"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 18.0
margin_right = 12.0
margin_bottom = 18.0
value = 50.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 5 )
texture_progress_offset = Vector2( 60, 45 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sasuke" type="Label" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -398.0
margin_bottom = -224.0
rect_scale = Vector2( 1.45136, 1.45136 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Img_barra_sasuke" type="Sprite" parent="Control/Sasuke"]
position = Vector2( 44.5, 65 )
scale = Vector2( 0.160156, 0.15625 )
texture = ExtResource( 9 )

[node name="Barra_vida" type="TextureProgress" parent="Control/Sasuke"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 18.0
margin_right = 12.0
margin_bottom = 18.0
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 8 )
texture_progress_offset = Vector2( 60, 28 )
tint_progress = Color( 0, 0.729412, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Barra_furia" type="TextureProgress" parent="Control/Sasuke"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 18.0
margin_right = 12.0
margin_bottom = 18.0
value = 50.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
texture_progress_offset = Vector2( 60, 45 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nome_vida" type="Label" parent="Control"]
margin_left = 363.0
margin_top = 90.0
margin_right = 406.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 1 )
text = "Vida"

[node name="Nome_furia" type="Label" parent="Control"]
margin_left = 228.0
margin_top = 105.0
margin_right = 282.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 2 )
text = "furia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Furia_completa" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 217.0
margin_top = 129.0
margin_right = 331.0
margin_bottom = 150.0
rect_scale = Vector2( 0.669714, 0.669714 )
custom_fonts/font = SubResource( 3 )
text = "Pressione  T"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.5
margin_top = 81.0
margin_right = 64.5
margin_bottom = 126.0
rect_scale = Vector2( 1.32432, 1.32432 )
custom_fonts/font = SubResource( 8 )
text = "00 : 00 : 000
"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 513.0
margin_top = 26.0
margin_right = 591.0
margin_bottom = 95.0
rect_scale = Vector2( 1.33416, 1.33416 )
custom_fonts/font = SubResource( 9 )
text = "Pause
tecla  P"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anima" type="AnimationPlayer" parent="Control"]
playback_speed = 0.1
anims/RESET = SubResource( 5 )
anims/furia_completa_naruto = SubResource( 6 )
anims/furia_completa_sasuke = SubResource( 7 )

[node name="Nome_timer" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -22.0
margin_top = 33.0
margin_right = 35.0
margin_bottom = 54.0
rect_scale = Vector2( 1.9185, 1.9185 )
custom_fonts/font = SubResource( 3 )
text = "Tempo"
__meta__ = {
"_edit_use_anchors_": false
}
